cluster/core/networking/traefik-internal/healthcheck/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-healthcheck
  namespace: networking
spec:
  entryPoints:
    - traefik
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN}`) && Path(`/healthz`)
      kind: Rule
      priority: 10
      services:
        - name: ping@internal
          kind: TraefikService
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
